# git_repo

Assessment/: RandomForestWithBestFeatureEstimator.py
HA_Analytics/: turnover.csv
LinearProgrammingOptimization/: Interio_point_method.m
MonterCarloSimulations/: Jackpot model Pricing.pptx
NLP/: NLP_3.py  NLP_4.py  nlp_2_web_link.txt
NumericalMethods/: Conjugate Gradient Method.pptx
RandomForestVsLogisticRegression/: PCA_LogisticRegression.py  RandomFeatureBestEstimator.py  RandomForestVsLogisticRegressionAnalyses.docx
StartedPDEResearch/: Research_Part_1_IW.docx
c++AndPython/C++_Ubuntu/IWilliams/MITAS/: CMakeLists.txt  compile_and_buid.txt
c++AndPython/C++_Ubuntu/IWilliams/MITAS/output_files/: output.txt  output1.txt  output2.txt  output3.txt  output4.txt
c++AndPython/C++_Ubuntu/IWilliams/MITAS/src/: assignment.cpp
c++AndPython/C++_Ubuntu/IWilliams/MITAS/src/MedianFilter/: MedianFilter.cpp  MedianFilter.h
c++AndPython/C++_Ubuntu/IWilliams/assign_1/: CMakeLists.txt  compile_and_buid.txt
c++AndPython/C++_Ubuntu/IWilliams/assign_1/output_files/: output.txt  output1.txt  output2.txt  output3.txt  output4.txt
c++AndPython/C++_Ubuntu/IWilliams/assign_1/src/: assignment.cpp
c++AndPython/C++_Ubuntu/IWilliams/assign_1/src/MedianFilter/: MedianFilter.cpp  MedianFilter.h
deployment/: app.py  hiring.csv  hiring.py  model.pkl  requirements.txt.txt
sas_project/: CASE STUDY_ FLIGHT DELAYS.docx  project_non_parametric.sas  project_regression.sas  testdoc.docx
shift5/: autoencode_anomaly_detection.py  data.csv  isolated_forest_anomaly_detection.py  (+2 more)
(+251 files in other folders)
